# workport-scrapy-crawler

./: .env.sample  LICENSE  Makefile  README.md  cron_daily.sh  cron_monthly.sh  pyproject.toml  scrapy.cfg
workport_crawler/: identification.py  items.py  middlewares.py  models.py  pipelines.py  settings.py  utils.py
workport_crawler/spiders/: workport_crawler.py
